--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">[YOUR NAME HERE]</a>
+        <a class="navbar-brand" href="#">Atticus Bowie</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -59,7 +59,7 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <h4 class="card-title">My Portfolio</h4>
+              <h4 class="animated swing">My Portfolio</h4>
               <p class="card-text">[Short snippet about your Web Design portfolio]</p>
             </div>
             <div class="card-footer">
@@ -72,7 +72,7 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <h4 class="card-title">Hobbies</h4>
+              <h4 class="animated zoomIn">Hobbies</h4>
               <p class="card-text">Whether it's a good book, recipe, or activity, here are some hobbies helping me get through this quarantine.</p>
             </div>
             <div class="card-footer">
@@ -85,7 +85,7 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <h4 class="card-title">Thank You</h4>
+              <h4 class="animated rollIn">Thank You</h4>
               <p class="card-text">Sometimes we forget to tell people how much we appreciate them. I want to say thank you!</p>
             </div>
             <div class="card-footer">
@@ -98,7 +98,7 @@
           <div class="card h-100">
             <img class="card-img-top" src="http://placehold.it/500x325" alt="">
             <div class="card-body">
-              <h4 class="card-title">Boro Strong</h4>
+              <h4  class="animated infinite heartBeat">Boro Strong</h4>
               <p class="card-text">I am Boro Strong and here is how I show pride for being a part of such an amazing school & community.</p>
             </div>
             <div class="card-footer">
