--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Hobbies</a>
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Thank You</a>
@@ -70,7 +70,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/guitar.jpg" alt="">
             <div class="card-body">
               <h4 class="animated zoomIn">Hobbies</h4>
               <p class="card-text">Whether it's a good book, recipe, or activity, here are some hobbies helping me get through this quarantine.</p>
