--- a/boro.html
+++ b/boro.html
@@ -1,27 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <style>
-      body {
-background-color:#808080;
-
-      }
-    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
+      <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- MY STYLES -->
     <link rel="stylesheet" href="css/master.css">
-
-    <title>Hobbies</title>
+    <title>Boro Pride!</title>
+    <style>
+      img {
+        height: 500px;
+      }
+    </style>
   </head>
   <body>
-      <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Atticus Bowie</a>
@@ -33,56 +31,27 @@ background-color:#808080;
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="hobbies.html">Hobbies
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="hobbies.html">Hobbies</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="thanks.html">Thank You</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="boro.html">Boro Strong</a>
+            <li class="nav-item active">
+              <a class="nav-link disabled" href="boro.html">Boro Strong</a>
+              <span class="sr-only">(current)</span>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-
-<img src="img/guitar.jpg"  style="float:left;" height="500px" width="700px">
-
-<h3 class="animated zoomIn" style="float:right  text-align: center;">
-<br><br><br><br><br>
-  Playing Guitar</h3>
-<p style="float:right text-align: center;" >
-<br><br><br><br><br>
-
-  I have been playing guitar for over 3 years. As a Musician, I play live shows with my band,
-  <br>
-  practice nearly 4 hours a day, and enjoy recording covers of popular songs, that I
-<br>
-  post on my instgram page.</p>
-<br><br><br><br><br><br><br><br>
-<img src="img/bowling.jpg"  style="float:right;" height="450px" width="700px">
-
-<h3 class="animated fadeInDownBig" style="float:right  "> Bowling</h3>
+<img src="img/hsimg.jpg" style="float:left;">
 <br><br>
-<br><br>
-<p style="float:right " align="right"> I have only been bowling for around 2 years, however,
-  <br>
-   I have competed in multiple tornaments, and have successfully won scholarship money.
-   <br>
-    From Bowling, I am able to have some sort of physical activity/sport to do in my free time.</p>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<img src="img/car.jpg"  style="float:left;" height="400px" width="700px">
-
-<h3 class="animated lightSpeedIn" style="float:left  ">Working on Cars</h3>
-<br><br><br><br>
-<p style="float:left " > I have always been surrounded by cars. I enjoy the feeling of
-  <br>getting into a nice fast car, and turning the key. You can feel the engine burst into life as
-  <br>the horsepower waits to be unleashed. Working on cars provides a mental escape, and is very calming.
-  <br>The best part is when you finish the project and you can step back and look at your creation.</p>
+<h2 style="margin:100px; text-align:center;">Freehold High School</h2>
+<p style="text-align:center;">Freehold Boro High School is a place that may seem like just a school, but it is much more. It is a place where not only can you express yourself, but you can show who you are, without any fear of discrimination. Freehold Boro is more than just a school, its a family. Being a Colonel at Freehold Boro has taught me that school is more than just a place for learning, it is a place for development. It is a place where you can go to improve your intelligence and your life awareness. The amount of life skills that you can learn is incredible. The courses provided has a spectrum to tailor itself to your learning level. Teachers and staff are always there to help if you ever need it. To be a Freehold Boro Colonel means to be a family.</p>
+<br><br><br><br><br><br><br><br><br>
+<img src="img/hsimg2.jpg" style="float:right">
+<h1  class="animated infinite tada" style="text-align: center;">We Are Boro Strong!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
