--- a/thanks.html
+++ b/thanks.html
@@ -1,24 +1,25 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <style>
-      body {
-background-color:#808080;
-
-      }
-    </style>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!-- Animate CSS -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- MY STYLES -->
     <link rel="stylesheet" href="css/master.css">
-
-    <title>Hobbies</title>
+<style>
+  h2 {
+text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+</style>
+    <title>Thank You</title>
   </head>
   <body>
       <!-- Navigation -->
@@ -33,13 +34,13 @@ background-color:#808080;
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="hobbies.html">Hobbies
-                <span class="sr-only">(current)</span>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="thanks.html">Thank You</a>
+              <span class="sr-only">(current)</span>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="boro.html">Boro Strong</a>
@@ -49,41 +50,17 @@ background-color:#808080;
       </div>
     </nav>
 
-<img src="img/guitar.jpg"  style="float:left;" height="500px" width="700px">
-
-<h3 class="animated zoomIn" style="float:right  text-align: center;">
-<br><br><br><br><br>
-  Playing Guitar</h3>
-<p style="float:right text-align: center;" >
-<br><br><br><br><br>
-
-  I have been playing guitar for over 3 years. As a Musician, I play live shows with my band,
-  <br>
-  practice nearly 4 hours a day, and enjoy recording covers of popular songs, that I
-<br>
-  post on my instgram page.</p>
-<br><br><br><br><br><br><br><br>
-<img src="img/bowling.jpg"  style="float:right;" height="450px" width="700px">
-
-<h3 class="animated fadeInDownBig" style="float:right  "> Bowling</h3>
 <br><br>
-<br><br>
-<p style="float:right " align="right"> I have only been bowling for around 2 years, however,
-  <br>
-   I have competed in multiple tornaments, and have successfully won scholarship money.
-   <br>
-    From Bowling, I am able to have some sort of physical activity/sport to do in my free time.</p>
-
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<img src="img/car.jpg"  style="float:left;" height="400px" width="700px">
-
-<h3 class="animated lightSpeedIn" style="float:left  ">Working on Cars</h3>
-<br><br><br><br>
-<p style="float:left " > I have always been surrounded by cars. I enjoy the feeling of
-  <br>getting into a nice fast car, and turning the key. You can feel the engine burst into life as
-  <br>the horsepower waits to be unleashed. Working on cars provides a mental escape, and is very calming.
-  <br>The best part is when you finish the project and you can step back and look at your creation.</p>
-
+<img src="img/health.jpg" style="width:1000px; margin-left: 450px; margin-right: 500px;">
+<h2 class="animated heartBeat">Thank you to all First Responders and Healthcare workers</h2>
+<p>Dear workers, Thank you for risking your lives to help others in a time like this. It must be so hard going out every day to put your life
+<br>on the line for people you do not know during a pandemic that is affecting everyone. The importance of your work cannot be described by any words,
+<br>but to say the least each and every single one of you are absolute saviors. One day, the best in life will repay you as you are working on the front
+<br>lines and putting so much effort into helping others. Thank you all for being the best workers that you can be, and thank you all for donating so much time
+<br>and effort to all of your patients and the people that you surround yourself with. I know it must take a lot of time and effort to do what you all do, yet you
+<br>guys never let us down. You continue to show up to work and be the strong and resilient people that you are. You put your best efforts forward and you ensure
+<br>that your patients are not only healthy, but that they are happy as well. Thank you for being such kindhearted and strong individuals, and thank you for constantly
+<br>making sure that we all are doing alright. Thank you for working on the frontlines of this pandemic.</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
