--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
               <a class="nav-link" href="hobbies.html">Hobbies</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Thank You</a>
+              <a class="nav-link" href="thanks.html">Thank You</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Boro Strong</a>
+              <a class="nav-link" href="boro.html">Boro Strong</a>
             </li>
           </ul>
         </div>
@@ -57,13 +57,13 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/me.jpg" alt="">
             <div class="card-body">
               <h4 class="animated swing">My Portfolio</h4>
-              <p class="card-text">[Short snippet about your Web Design portfolio]</p>
+              <p class="card-text">A look at my previous projects.</p>
             </div>
             <div class="card-footer">
-              <a href="[ADD LINK TO YOUR PORTFOLIO]" class="btn btn-primary" target="_blank">Visit My Portfolio</a>
+              <a href="https://122abowie.github.io/122abowie.io/" class="btn btn-primary" target="_blank">Visit My Portfolio</a>
             </div>
           </div>
         </div>
@@ -83,26 +83,26 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/thankyou.jpg" alt="">
             <div class="card-body">
               <h4 class="animated rollIn">Thank You</h4>
               <p class="card-text">Sometimes we forget to tell people how much we appreciate them. I want to say thank you!</p>
             </div>
             <div class="card-footer">
-              <a href="hobbies.html" class="btn btn-primary">Find Out More!</a>
+              <a href="thanks.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card h-100">
-            <img class="card-img-top" src="http://placehold.it/500x325" alt="">
+            <img class="card-img-top" src="img/hs.jpg" alt="">
             <div class="card-body">
               <h4  class="animated infinite heartBeat">Boro Strong</h4>
               <p class="card-text">I am Boro Strong and here is how I show pride for being a part of such an amazing school & community.</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="boro.html" class="btn btn-primary">Find Out More!</a>
             </div>
           </div>
         </div>
